--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "outDir": ".millennium/Dist",
         "module": "ESNext",
         "target": "ES2020",
-        "jsx": "react",
+        "jsx": "react-jsx",
         "declaration": false,
         "moduleResolution": "node",
         "noUnusedLocals": true,
